Ихменил пути к файлам .css

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-@import "_variables.css";
-@import "_typography.css";
-@import "_card.css";
+@import "./css/_variables.css";
+@import "./css/_typography.css";
+@import "./css/_card.css";
 
 * {
     margin: 0;
