--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-@import "./css/_variables.css";
-@import "./css/_typography.css";
-@import "./css/_card.css";
+@import "variables.css";
+@import "typography.css";
+@import "card.css";
 
 * {
     margin: 0;
