--- a/css/scss/pages/_main.scss
+++ b/css/scss/pages/_main.scss
@@ -1,3 +1,13 @@
 // -----------------------------------------------------------------------------
 // This file contains styles that are specific to the home page.
 // -----------------------------------------------------------------------------
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  background-color: $color-primary-pale;
+  height: 100vh;
+  padding: 2rem;
+}
