--- a/css/scss/abstracts/_variables.scss
+++ b/css/scss/abstracts/_variables.scss
@@ -2,70 +2,24 @@
 // This file contains all application-wide Sass variables.
 // -----------------------------------------------------------------------------
 
+//LAYOUT
+$max-width: 1024px;
 
+//COLORS
+$color-white: #fff;
+$color-primary-pale: hsl(225, 100%, 94%);
+$color-primary-bright: hsl(245, 75%, 52%);
+$color-neutral-very-pale:  hsl(225, 100%, 98%);
+$color-neutral-desaturated: hsl(224, 23%, 55%);
+$color-neutral-dark: hsl(223, 47%, 23%);
 
+//FONTS
+$font-size-h1: 2.6rem;
+$font-size-h2: 2rem;
+$font-size-h3: 2.2rem;
+$font-size-h4: 1.4rem;
+$font-size-p: 1.6rem;
 
-
-/// Regular font family
-/// @type List
-$text-font-stack: 'Open Sans', 'Helvetica Neue Light', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif !default;
-
-/// Code (monospace) font family
-/// @type List
-$code-font-stack: 'Courier New', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Monaco', monospace !default;
-
-
-
-
-
-/// Copy text color
-/// @type Color
-$text-color: rgb(34, 34, 34) !default;
-
-/// Main brand color
-/// @type Color
-$brand-color: rgb(229, 0, 80) !default;
-
-/// Light grey
-/// @type Color
-$light-grey: rgb(237, 237, 237) !default;
-
-/// Medium grey
-/// @type Color
-$mid-grey: rgb(153, 153, 153) !default;
-
-/// Dark grey
-/// @type Color
-$dark-grey: rgb(68, 68, 68) !default;
-
-
-
-
-
-/// Container's maximum width
-/// @type Length
-$max-width: 1180px !default;
-
-
-
-
-
-/// Breakpoints map
-/// @prop {String} keys - Keys are identifiers mapped to a given length
-/// @prop {Map} values - Values are actual breakpoints expressed in pixels
-$breakpoints: (
-  'small': 320px,
-  'medium': 768px,
-  'large': 1024px,
-) !default;
-
-
-
-
-
-
-/// Relative or absolute URL where all assets are served from
-/// @type String
-/// @example scss - When using a CDN
-///   $base-url: 'http://cdn.example.com/assets/';
-$base-url: '/assets/' !default;
+$font-weight-medium: 500;
+$font-weight-bold: 700;
+$font-weight-black: 900;
