--- a/css/scss/base/_base.scss
+++ b/css/scss/base/_base.scss
@@ -22,14 +22,8 @@ html {
 }
 
 /**
- * Basic styles for links
- */
-a {
-  color: $brand-color;
-  text-decoration: none;
-
-  @include on-event {
-    color: $text-color;
-    text-decoration: underline;
-  }
+ * Makes images responsive
+*/
+img {
+  width: 100%;
 }
