--- a/css/scss/main.scss
+++ b/css/scss/main.scss
@@ -18,17 +18,14 @@
   'base/helpers';
 
 // 4. Layout-related sections
-@import
-  'layout/header',
-  'layout/footer';
 
 // 5. Components
 @import
-  'components/button';
+  'components/button',
+  'components/card';
 
 // 6. Page-specific styles
-@import
-  'pages/home';
+@import 'pages/main';
 
 // 7. Themes
 @import
